@@ -1,5 +1,11 @@
 2011-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/macros.lisp: Add format specific output
+	functions.
+	src/algebra/html.spad.pamphlet: Use sayHtml.
+
+2011-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/define.boot: Handle toplevel 'where'.
 
 2010-12-15  Ralf Hemmecke  <ralf@hemmecke.de>
